@@ -31,4 +31,5 @@ BUGFIXES FROM BUGZILLA:
 022 ==> 370631 - Converting ARW to DNG fails.
 023 ==> 370175 - Cannot Import Images (Failed to detect camera with GPhoto2 from Solid information).
 024 ==> 370958 - Cannot save a scanned image.
-025 ==> 
+025 ==> 370943 - Cannot Select EXIF or IPTC Metadata Subspaces.
+026 ==> 
